[tool.poetry]
name = "TFM"
version = "0.1.0"
description = "Traction Force Microscopy with Kalman Filter"
authors = ["AozoraMatsuda <matsuda-aozora759@g.ecc.u-tokyo.ac.jp>"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "1.21"
pandas = "^1.3"
matplotlib = "^3.4"
plotly = "^5.3"
black = "^21.8b0"
seaborn = "^0.11.2"
simdkalman = "^1.0.2"
pykalman = "^0.9.5"
statsmodels = "^0.12.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
